--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-export JWT_SECRET_KEY= 'JWT_SECRET_KEYJWT_SECRET_KEYJWT_SECRET_KEYJWT_SECRET_KEYJWT_SECRET_KEYJWT_SECRET_KEY'
+export JWT_SECRET_KEY= 'JWT_SECRET_KEY'
